# discord-bot

./: Cargo.toml  README.md
src/: main.rs
src/commands/: help.rs  math.rs  mod.rs
