[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache", "framework", "standard_framework"], version = "0.10"}
dotenv = "*"
reqwest = {"version"="0.11.9", features = ["blocking"]}
serde_json = "1"
serde = {"version"="1.0.136", features=["derive"]}
